Fix issue with headers on movie index table view not being aligned
Fixes: #4800

--- a/frontend/src/Movie/Index/Table/MovieIndexHeader.css
+++ b/frontend/src/Movie/Index/Table/MovieIndexHeader.css
@@ -80,5 +80,5 @@
 .actions {
   composes: headerCell from '~Components/Table/VirtualTableHeaderCell.css';
 
-  flex: 0 1 90px;
+  flex: 0 1 120px;
 }
